<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="media_folder_label">Media folder:</string>
    <string name="select_folder_label">Select folder</string>
    <string name="play_action">Play</string>
    <string name="pause_action">Pause</string>
    <string name="stop_action">Stop</string>
    <string name="no_song">No song selected</string>
    <string name="media_folder">/sdcard/Music</string>
    <string name="greeting">Hello!</string>
    <string name="text_info">INFO</string>
    <string name="text_lyrics">LYRICS</string>
    <string name="media_title">Title: </string>
    <string name="media_artist">Artist: </string>
    <string name="media_size">Size:</string>
    <string name="media_duration">Duration:</string>
    <string name="share_weibo">Share To: </string>
</resources>
