<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MediaActivity" >

    <ImageView
                android:id="@+id/album_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/album_img_default"/>
    <TextView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/album_icon"
            android:text="@string/media_title"
            android:gravity="center_vertical|right"
            android:id="@+id/media_title"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/media_title"
            android:paddingLeft="3dp"
            android:gravity="center_vertical|left"
            android:singleLine="true"
            android:id="@+id/media_title_content"/>
    <TextView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_below="@id/media_title"
            android:layout_toRightOf="@id/album_icon"
            android:text="@string/media_artist"
            android:gravity="center_vertical|right"
            android:id="@+id/media_artist"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/media_title"
            android:paddingLeft="3dp"
            android:layout_below="@id/media_title_content"
            android:gravity="center_vertical|left"
            android:singleLine="true"
            android:id="@+id/media_artist_name"/>
    <TextView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_below="@id/media_artist"
            android:layout_toRightOf="@id/album_icon"
            android:text="@string/media_size"
            android:gravity="center_vertical|right"
            android:id="@+id/media_size"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/media_size"
            android:paddingLeft="3dp"
            android:layout_below="@id/media_artist_name"
            android:gravity="center_vertical|left"
            android:singleLine="true"
            android:id="@+id/media_size_value"/>
    <TextView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_below="@id/media_size"
            android:layout_toRightOf="@id/album_icon"
            android:text="@string/media_duration"
            android:gravity="center_vertical|right"
            android:id="@+id/media_duration"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/media_duration"
            android:layout_below="@id/media_size_value"
            android:paddingLeft="3dp"
            android:gravity="center_vertical|left"
            android:singleLine="true"
            android:id="@+id/media_duration_value"/>
    <ImageButton 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingLeft="3dp"
            android:background="#00000000"
            android:id="@+id/sinaweibo_icon"/>
    <TextView
        android:id="@+id/share_weibo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|left"
        android:layout_toLeftOf="@id/sinaweibo_icon"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="@string/share_weibo" />
    
</RelativeLayout>