<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:text="@string/no_song"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/media_controls">
        <ImageButton
                android:id="@+id/playmode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_player_mode_all_pressed"/>
        <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_player_prev_default"
                android:contentDescription="@string/play_action"/>
        <ImageButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_player_play_default"
                android:contentDescription="@string/play_action"/>
        <ImageButton
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/is_player_stop_default"
                android:contentDescription="@string/play_action"/>
        <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_player_next_default"
                android:contentDescription="@string/stop_action"/>
    </LinearLayout>
    <ProgressBar
            android:id="@+id/song_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@id/media_controls"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_above="@id/song_progress"
            android:text="00:00"
            android:gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:id="@+id/media_folder"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_above="@id/song_progress"
            android:gravity="center_vertical"
            android:text="--:--"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:id="@+id/folder_name"/>
    <View  
            android:layout_width="fill_parent" 
            android:id="@+id/divider" 
            android:layout_height="2px" 
            android:layout_above="@id/folder_name"
            android:layout_marginBottom="3dp"
            android:background="?android:attr/listDivider"/>  
    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/song_name"
        android:layout_above="@id/divider"
        android:orientation="vertical" >
    </LinearLayout>
</RelativeLayout>

